src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_ClrPropertyInvalidUse.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">    
	<Button>
        <Color.A>
            100
        </Color.A>
    </Button>
</DockPanel>

</Page>
